--- a/deploy/kubernetes/complete-demo-ingress.yaml
+++ b/deploy/kubernetes/complete-demo-ingress.yaml
@@ -51,6 +51,7 @@ metadata:
     name: carts-db
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 27017
@@ -109,6 +110,7 @@ metadata:
     name: carts
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -152,6 +154,7 @@ metadata:
     name: catalogue-db
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 3306
@@ -198,6 +201,7 @@ metadata:
     name: catalogue
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -299,6 +303,7 @@ metadata:
     name: orders-db
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 27017
@@ -357,6 +362,7 @@ metadata:
     name: orders
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -403,6 +409,7 @@ metadata:
     name: payment
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -442,6 +449,7 @@ metadata:
     prometheus.io/path: "/prometheus"
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -489,6 +497,7 @@ metadata:
     name: rabbitmq
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 5672
@@ -547,6 +556,7 @@ metadata:
     name: shipping
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -601,6 +611,7 @@ metadata:
     name: user-db
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 27017
@@ -650,6 +661,7 @@ metadata:
     name: user
   namespace: sock-shop
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
@@ -673,15 +685,15 @@ spec:
       - path: /cart
         backend:
           serviceName: carts
-          servicePort: 80          
+          servicePort: 80
       - path: /catalogue
         backend:
           serviceName: catalogue
-          servicePort: 80       
+          servicePort: 80
       - path: /orders
         backend:
           serviceName: orders
-          servicePort: 80   
+          servicePort: 80
       - path: /login
         backend:
           serviceName: user
